# xtHUNT

./: CMakeLists.txt  Credits.md  Info.md  Input.cpp  Makefile  README.md  Render.cpp  Render.hpp  globalvars.cpp  main.cpp  push.bat
Data/: globalvars.cpp  globalvars.hpp
docs/: CodeDocs.md  HowToCommit.md  Modding.md  Raylib.fork.docs.odt  Story.md
graphics/: eye.tga  grab.tga  hallway.tga  home.tga  hover.tga  missing.tga  outside.tga  spritesheet1.tga
src/: CMakeLists.txt  IO.cpp  IO.hpp  Input.cpp  Input.hpp  Npc.cpp  Npc.hpp  Render.cpp  Render.hpp  Textures.cpp  Textures.hpp  Types.hpp  Utils.cpp  Utils.hpp  application.rc  globalvars.cpp  globalvars.hpp  ini.cpp  ini.hpp  logger.cpp  logger.hpp  main.cpp  main.hpp  spritesheet.cpp  spritesheet.hpp
xthunt/: CMakeCache.txt  Makefile  cmake_install.cmake  compile.bat  dnf-quickinstall.sh  rundebug.bat
xthunt/graphics/: spritesheetcords.txt
xthunt/saves/: gamestate.json
xthunt/src/: CMakeLists.txt  IO.cpp  IO.hpp  Npc.cpp  Render.cpp  Render.hpp  Textures.hpp  Types.hpp  Utils.hpp  globalvars.hpp  logger.hpp  main.cpp  main.hpp  spritesheet.cpp
xthunt/src/misc/: data.rc  icon.rc.data
xthunt/w64devkit/: w64devkit.ini
xthunt/w64devkit/lib/: libsframe.la
xthunt/w64devkit/lib/gcc/x86_64-w64-mingw32/15.2.0/: libatomic.la  libcaf_single.la  libgfortran.la  libgomp.la  libquadmath.la  libssp.la  libssp_nonshared.la  libstdc++.a-gdb.py  libstdc++.la  libstdc++exp.la  libstdc++fs.la  libsupc++.la
xthunt/w64devkit/lib/gcc/x86_64-w64-mingw32/15.2.0/include/c++/: exception
xthunt/w64devkit/lib/gcc/x86_64-w64-mingw32/15.2.0/include/c++/x86_64-w64-mingw32/bits/: c++config.h
xthunt/w64devkit/lib/gcc/x86_64-w64-mingw32/15.2.0/include/ssp/: ssp.h
xthunt/w64devkit/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xe  i386pe.xer  i386pe.xn  i386pe.xr  i386pe.xu  i386pep.x  i386pep.xa  i386pep.xbn  i386pep.xe  i386pep.xer  i386pep.xn  i386pep.xr  i386pep.xu
xthunt/w64devkit/libexec/gcc/x86_64-w64-mingw32/15.2.0/install-tools/: mkheaders
xthunt/w64devkit/src/: w64devkit.c
